--- a/src/app/does-it-work/does-it-work.component.html
+++ b/src/app/does-it-work/does-it-work.component.html
@@ -27,74 +27,103 @@
 
           <h2 class="sb-text-light-green-gradient mt-5">Our Vision</h2>
           <p>
-            We started SpotBie to build a highly rich experience for people who love the products and services
-            our Community Members offer and for the extraordinary people who provide them; YOU, the business owner.
+            We started SpotBie to build a highly rich user experience for people who love high quality products and services.
+            This is not only true for consumers, but also true for business owners. At SpotBie, we aim to provide businesses
+            with an easy to use, zero loss platform that gets them the results they are looking for.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Our Features</h2>
           <ul>
-            <li>Loyalty Points, Rewards, and Tiers</li>
+            <li>Loyalty Points and Rewards</li>
+            <li>Algorithm Calculated Exposure</li>
             <li>Local Results</li>
-            <li>Site-wide Results</li>
-            <li>Ad Banners within our platforms</li>
-            <li>API Integrations</li>
-            <li>SMS and E-mail Campaigns</li>
-            <li>Geofence Marketing</li>
-            <li>Use Customer Data</li>
+<!--            <li>Site-wide Results</li>-->
+            <li>Ad Banners within our platform</li>
+<!--            <li>API Integrations</li>-->
           </ul>
 
-          <h2 class="sb-text-light-green-gradient mt-5">What problem does SpotBie solve?</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">Coming Soon</h2>
+          <ul>
+            <li>SMS and E-mail Campaigns</li>
+            <li>Geofence Marketing</li>
+            <li>Access to Customer Insights</li>
+          </ul>
+
+          <h2 class="sb-text-light-green-gradient mt-5">What problems does SpotBie solve?</h2>
           <p>
-            Loyalty programs are well known to bring in additional revenue and brand awareness for businesses. Many large franchises and
-            retails have in-house loyalty programs. However, some restaurants and retail stores are left with less options to compete because
-            they lack the funding for maintaining an in-house loyalty program.
+            Loyalty programs are well known to bring in additional revenue, customer retention, and brand awareness for
+            businesses. Many large franchises and retails have in-house loyalty programs. However, some small businesses
+            are left with less options to compete because they lack the funding for maintaining an in-house loyalty program.
           </p>
           <br/>
           <p>
-            Alternatively, some businesses use third party loyalty programs that come integrated with POS systems such as Square. While this is a great option, it leaves out
-            the focus on building a highly rich loyalty program experience for your users because of their broad focus.
+            Alternatively, some businesses use third party loyalty programs that are integrated with POS systems such as Square.
+            While this is a great option, it leaves out the focus on building a highly rich loyalty program experience for
+            your users because of their broad focus.
           </p>
           <br/>
           <p>
-            By signing up through our website, you are becoming part of an unforgettable experience. Not only do we provide an
-            integration for businesses to use on their online stores, but we also offer a stand-alone user app on iOS and Android.
+            To solve these problems, we've built a platform that solely focuses on loyalty programs and all their benefits
+            while staying within an affordable membership for our businesses. By focusing on bringing our users what they
+            are really interested in (savings, rewards, more customers, insights, etc.) we've arrived at a solution for
+            businesses and everyday users that we think you'll like.
+          </p>
+
+          <h2 class="sb-text-light-green-gradient mt-5">First things first...</h2>
+          <p>
+            By signing up through our website, you are becoming part of an unequal experience. Customer service is our
+            top priority here at SpotBie. We connect with our users and community in a human-friendly manner to go
+            the extra steps and get their full satisfaction. While being a client at SpotBie, you will never chat with a bot,
+            wait long times for customer service, or be served by an untrained professional... and that's part of our duty to you.
+          </p>
+
+          <h2 class="sb-text-light-green-gradient mt-5">Enter SpotBie. Why us?</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">"IT'S ON US"... it's not a gimmick.</h2>
+          <p>
+            Literally... the platform is free. You might ask why we do this, and the reality is that we do it because
+            customer interaction is what really drives our business model. Within the app, businesses are allowed to sign
+            up for monthly memberships that allow their business to be advertise to nearby users which keeps our business
+            model profitable. Every interaction between a nearby potential customer and your business creates an abundant
+            amount of data that we capitalize on.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Growing Brand Awareness</h2>
           <p>
-            SpotBie gives businesses an additional tool to grow their brand. Business owners can use SpotBie to deliver their product/service to the right audience,
-            to be listed amongst relevant/high standard businesses, and appear in users' local and site-wide results.
+            SpotBie gives businesses an additional tool to grow their brand. Business owners can use SpotBie to deliver
+            their product/service to the right audience, be listed amongst relevant/high standard businesses, and appear
+            in users' local results.
           </p>
 
           <div style="padding-left: 1rem;">
             <h3 class="sb-text-light-green-gradient mt-5">1. Deliver to the Right Audience</h3>
             <p>
               When you are listed on our platform, your business starts attracting users that are one step away from making
-              a decision and start spending. The intent each user has when they open the SpotBie app is to look for something that is
-              nearby and solve their dinner or shopping plans. Quick and easy, at the tap of three buttons (sometimes two), the user is provided with a list of
-              highly rated and reviewed restaurants or retail stores.
+              a decision and start spending. The primary intent our users have when they open the SpotBie app is to look
+              for something that is nearby and solve their dinner or shopping plans. Quick and easy, at the tap of four buttons (sometimes five),
+              the user is provided with a list of highly rated & reviewed businesses.
             </p>
 
             <h3 class="sb-text-light-green-gradient mt-5">2. Listed Amongst Excellence</h3>
             <p>
-              At SpotBie, you are listed amongst competent restaurants and retails stores that make excellence a habit. To being with,
-              we take a look at ratings and reviews from Yelp. If we consider a business is worth taking a closer look at, we go ahead and
-              experience their food, products, or services through personal consumption. Yes... that's right, we try them out ourselves! We love delicious food,
-              great customer service, and great products so we aren't willing to offer our users anything less!
+              At SpotBie, you are listed amongst competent businesses that make excellence a habit. To being with,
+              we take a look at ratings and reviews from Yelp. If we consider a business is worth taking a closer look at,
+              we go ahead and experience their food, products, or services through personal consumption. Yes... that's right,
+              we try them out ourselves! We love delicious food, great customer service, and great products so we aren't willing
+              to offer our users anything less!
             </p>
 
             <h3 class="sb-text-light-green-gradient mt-5">3. Local Results</h3>
             <p>
-              Your restaurant or retail store will appear in a map drawn according to the user's distance from your store. In turn,
+              When listed on SpotBie, your business will appear in a map drawn according to the user's distance from your store. In turn,
               this will ramp-up your local brand awareness near your stores' locations. In the other hand, if there are tourists nearby,
               our platform simplifies the user experience so that they can easily see what they have around and closest to them.
             </p>
 
-            <h3 class="sb-text-light-green-gradient mt-5">4. Site-wide Results</h3>
+<!--            <h3 class="sb-text-light-green-gradient mt-5">4. Site-wide Results</h3>
             <p>
               Your restaurant, store, service, or event will also be featured on our site-wide results. This means that people from all
               over the nation can search for your store online and make orders through your website while accumulating loyalty.
-            </p>
+            </p>-->
           </div>
 
           <h2 class="sb-text-light-green-gradient mt-5">Acquisition & Retention</h2>
@@ -104,34 +133,27 @@
           </p>
 
           <div style="padding-left: 1rem;">
-            <h3 class="sb-text-light-green-gradient mt-5">1. Local Results</h3>
+            <h3 class="sb-text-light-green-gradient mt-5">1. The SpotBie Map</h3>
             <p>
-              Our app allows users to instantly find what stores are around them. Once they open the SpotBie app and click on the
-              category they are searching for, they are presented with a list of nearby restaurants or stores. This makes it easy
-              for users to choose a store, nearing the gap between the prospective user and the end of the marketing funnel.
+              Our app allows users to interactively find businesses that are around them. Once they open the SpotBie app and tap on the
+              category they are searching for, they are presented with a list of nearby businesses. This makes it easy
+              for users to choose a store, nearing the gap between them and gaining a new customer.
             </p>
 
-            <h3 class="sb-text-light-green-gradient mt-5">2. Different Loyalty Campaigns</h3>
+            <h3 class="sb-text-light-green-gradient mt-5">2. The SpotBie Algorithm</h3>
             <p>
-              To keep things entertaining for your customers, we have included the ability to launch different types of
-              campaigns. You can choose to award items, discounts, experiences, and run programs such as birthday awards
-              and loyalty tiers.
+              The SpotBie algorithm periodically adjusts your business' reward ratio on the platform so that you can remain
+              competent amongst other businesses. Users that look at these businesses through our map can then compare reward
+              rates and decide where to go.
             </p>
 
-            <h3 class="sb-text-light-green-gradient mt-5">3. Compete Locally with other Members</h3>
+            <h3 class="sb-text-light-green-gradient mt-5">3. Different Loyalty Campaigns</h3>
             <p>
-              By adjusting your Dollar-to-Loyalty Point ratio you can adjust the value of loyalty points when users spend
-              at your business. Users that look at these businesses thorugh our map or online can then compare reward
-              rates and rewards to see where they want to shop.
+              To keep things entertaining for your customers, we have included the ability to award items, discounts, and
+              experiences.
             </p>
 
-            <h3 class="sb-text-light-green-gradient mt-5">4. Set Limits</h3>
-            <p>
-              Business owners can set the minimum expense amounts before rewards can be redeemed at their stores.
-              Additionally, SpotBie Community Members get to choose how much they want to give out in rewards every month.
-            </p>
-
-            <h3 class="sb-text-light-green-gradient mt-5">5. Site-wide Results</h3>
+<!--            <h3 class="sb-text-light-green-gradient mt-5">5. Site-wide Results</h3>
             <p>
               SpotBie also allows users to find site-wide stores through the search function on our website.
             </p>
@@ -140,24 +162,39 @@
             <p>
               Do you have an online store and wish to add a loyalty program feature into it? SpotBie can make that happen
               for you.
-            </p>
+            </p>-->
           </div>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Use Customer Data</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">Use Customer Insight (Coming Soon)</h2>
           <p>
-            SpotBie Community Members have the ability to use customer data for their marketing efforts. On our business admin dashboard, you will find
-            reports and utilities that will help maximize your business's efficiency.
+            SpotBie Community Members will have the ability to use their customer's data for their marketing efforts. On our
+            business admin dashboard, you will find reports and utilities that will help maximize your business's efficiency.
           </p>
           <div style="padding-left: 1rem;">
             <h3 class="sb-text-light-green-gradient mt-5">1. Send Promotional Content</h3>
             <p>
               SpotBie helps your business send promotional content through different methods. As a SpotBie Community Member,
-              you are allowed to send personalized e-mail campaigns, text-msgs. and nearby notifications, to customers who have opted to receive them.
+              you are allowed to send personalized e-mail campaigns, text-msgs., and nearby notifications to customers who
+              have opted to receive them.
             </p>
 
             <h3 class="sb-text-light-green-gradient mt-5">2. New & Repeat Customers</h3>
-            <p>Learn which customers are in your store for the first time and which ones are returning.</p>
+            <p>
+              Learn which customers are in your store for the first time and which ones are returning. SpotBie also recognizes
+              which users are in your store and at what time, allowing you to assign them to a particular segment.
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">3. Providing User Insights</h3>
+            <p>
+              SpotBie automatically gains user data and analyzes it in order to get you the customer insights you need. With this data
+              you'll be able to modify your ad campaigns and marketing strategies backed by factual user habits and purchase data.
+            </p>
           </div>
+
+          <h2 class="sb-text-light-green-gradient mt-5">Questions?</h2>
+          <p>
+            Don't hesitate to call! Simply dial +1 (786) 600-5946 and we'll take your request!
+          </p>
         </div>
 
         <div class='spotbie-overlay-window' style="z-index: 99;" *ngIf="false">
