--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -66,7 +66,6 @@
       <div (click)="openPurchaseIncentives(3)">The Idea</div>
       <div (click)="openPurchaseIncentives(2)">How Does it work?</div>
       <div (click)="openPurchaseIncentives(1)">View Live Demo</div>
-      <div (click)="openPurchaseIncentives(0)">Pricing</div>
     </div>
 </section>
 
@@ -122,7 +121,7 @@
     </div>
 
     <p class="spotbie-text-gradient text-center text-uppercase">
-        Keep them coming back with exclusive rewards
+        Keep them coming back with <span class='sb-text-light-green-gradient'>exclusive rewards</span>
         <br/><br/>
     </p>
 
@@ -152,7 +151,7 @@
     </div>
 
     <p class="spotbie-text-gradient text-center text-uppercase">
-        OFFER APPEALING <span class='sb-text-light-green-gradient'>REWARD RATES</span> and <span class='sb-text-light-green-gradient'>REWARDS</span>
+        INTERACTIVE <span class='sb-text-light-green-gradient'>EXPERIENCE</span>
         <br/><br/>
     </p>
 
