--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
                     </app-menu-logged-out>
 
 <div class="spotbie-main-holder" id="spotbieMainHolder">
-    <app-map [business]="false" (signUpEvt)="signUp()" #app_map></app-map>z
+    <app-map [business]="false" (signUpEvt)="signUp()" #app_map></app-map>
 
     <div class="spotbie-menu-page-padding-top-not-logged"></div>
 </div>
