--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
@@ -10,27 +10,23 @@
     </td>
 
     <td [ngStyle]="getPointsWrapperStyle()">
-      <img class="spotbie-header-mini-logo" src="assets/images/spotbie_logo_header.svg" *ngIf="isDesktop" (click)="home()"/>
+      <ng-container *ngIf="this.userType === eAllowedAccountTypes.Personal else businessAccountToolbar">
+        <img class="spotbie-header-mini-logo" src="assets/images/spotbie_logo_header.svg" *ngIf="isDesktop" (click)="home()"/>
 
-      <span class='sb-loyalty-points' (click)="toggleLoyaltyPoints()" >{{ userLoyaltyPoints | number:'1.0':'en-US' }}</span>
+        <span class='sb-loyalty-points' (click)="toggleLoyaltyPoints()" >{{ userLoyaltyPoints | number:'1.0':'en-US' }}</span>
 
-      <img class='sb-loyalty-points' *ngIf="!isMobile && !isTablet" (click)="toggleRedeemables()"  src="assets/images/spotbie-loyalty-points.svg" />
+        <img class='sb-loyalty-points' *ngIf="!isMobile && !isTablet" (click)="toggleRedeemables()"  src="assets/images/spotbie-loyalty-points.svg" />
 
-      <div class="sb-businessMenu" *ngIf="!isDesktop">
-        <img class='sb-loyalty-points' (click)="toggleRedeemables()" src="assets/images/spotbie-loyalty-points.svg" />
-      </div>
+        <div class="sb-businessMenu" *ngIf="!isDesktop">
+          <img class='sb-loyalty-points' (click)="toggleRedeemables()" src="assets/images/spotbie-loyalty-points.svg" />
+        </div>
 
-      <!--<div *ngIf="this.userType == eAllowedAccountTypes.PlaceToEat ||
-                  this.userType == eAllowedAccountTypes.Shopping ||
-                  this.userType == eAllowedAccountTypes.Events"
-            (click)="toggleRedeemables()"
-            class="sb-businessMenu">
+        <img class='sb-qr' (click)="toggleQRScanner()"  src="assets/images/spotbie-qr.svg" />
+      </ng-container>
 
-        <img class='sb-loyalty-points' src="assets/images/menu spotbie-01.svg" />
-
-      </div>-->
-
-      <img class='sb-qr' (click)="toggleQRScanner()"  src="assets/images/spotbie-qr.svg" />
+      <ng-template #businessAccountToolbar>
+        <img class="spotbie-header-mini-logo" src="assets/images/spotbie_logo_header.svg" (click)="home()" />
+      </ng-template>
 
       <span class='sb-userName' (click)="openWindow(settingsWindow)" *ngIf="userName !== null && isDesktop">{{ userName }}</span>
     </td>
