--- a/src/app/how-does-it-work/how-does-it-work.component.html
+++ b/src/app/how-does-it-work/how-does-it-work.component.html
@@ -27,24 +27,46 @@
 
           <h2 class="sb-text-light-green-gradient mt-5">Sign Up to Our Platform...</h2>
           <p>
-            You will be able to set your restaurant's or retail store's location along with your categories, store description, and store name.
-            After you confirm your account, you will be able to set up your loyalty points balance, upload rewards, and start awarding your users. 
+            You will be able to set your restaurant's or retail store's location along with your categories,
+            store description, and store name. After you confirm your account, you will be able to upload rewards and
+            start awarding your users.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Your Loyalty Points</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">Loyalty Points</h2>
           <p>
-            To set up your loyalty points click or tap on the Loyalty Points component and fill out the loyalty points you'd like to offer and how much they
-            are worth per dollar spent at your business.
+            Our users claim Loyalty Points by scanning receipts from their everyday purchases. SpotBie users can then
+            claim rewards at Local Restaurants and Stores.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Upload Rewards</h2>
           <p>
-            As a business owner you are encouraged to upload the best of your menu items onto your digital rewards menu to entice the audience.
+            As the business owner you can upload the best of your menu items onto your digital rewards menu to entice your audience.
+            Each reward you upload also carries a minimum spend policy (how much users must spend in order to redeem this reward).
           </p>
 
+          <h2 class="sb-text-light-green-gradient mt-5">Redeeming Rewards</h2>
+          <p>
+            Users that go into your business can claim any of the rewards that you've listed on your menu as long as they
+            have the Loyalty Point balance for it.
+          </p>
+
+
+          <h2 class="sb-text-light-green-gradient mt-5">It's On Us.</h2>
+          <p>
+            Rewards over $30 USD that your customers claim are then refunded into your bank account.
+          </p>
+
+          <!--
           <h2 class="sb-text-light-green-gradient mt-5">Award Users</h2>
           <p>
-            Award your guests with Loyalty Points at check-out. Additionally, allow them to claim your rewards while looking at your custom rewards menu.
+            Award your guests with Loyalty Points at check-out. Simply enter their bill value and the SpotBie app will generate
+            a QR code for them to scan. After they scan the QR code, the points will be transferred to their account.
+          </p>
+          -->
+
+          <h2 class="sb-text-light-green-gradient mt-5">Questions?</h2>
+          <p>
+            Don't hesitate to call! Simply dial +1 (786) 600-5946 and we'll take your request!
           </p>
         </div>
 
