--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -26,19 +26,20 @@
           <h2 class="sb-text-light-green-gradient">WITH REWARDS & LOYALTY POINTS</h2>
         </div>
 
-        <div id="pricing1" #attractNewCustomers>
+        <div id="pricing1" class="mt-5" #attractNewCustomers>
           <div class="sb-packetWrapper">
-            <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">PRICING #1</h1>
+            <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">STARTER</h1>
 
             <h2 class="text-uppercase spotbie-text-gradient">
-              $69.99/monthly
+              $199.99/monthly
             </h2>
 
             <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
             <div class="text-uppercase text-center">
-              <h3 class="sb-text-light-green-gradient">$840.00 USD</h3>
-              <span class="spotbie-text-gradient">Once every 12 months.</span>
+              <h3 class="sb-text-light-green-gradient">2,000 Loyalty Points</h3>
+              <p class="spotbie-text-gradient">No Bonus Loyalty Points</p>
+              <p class="spotbie-text-gradient">Default Max Reward Rate</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
@@ -47,17 +48,18 @@
           </div>
 
           <div class="sb-packetWrapper">
-            <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">PRICING #2</h1>
+            <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">INTERMEDIATE</h1>
 
             <h2 class="text-uppercase spotbie-text-gradient">
-              $79.99/monthly
+              $299.99/monthly
             </h2>
 
             <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
             <div class="text-uppercase text-center">
-              <h3 class="sb-text-light-green-gradient">$480.00 USD</h3>
-              <span class="spotbie-text-gradient">Once every 6 months.</span>
+              <h3 class="sb-text-light-green-gradient">3,500 Loyalty Points</h3>
+              <p class="spotbie-text-gradient">500 Bonus Loyalty Points</p>
+              <p class="spotbie-text-gradient">+0.01% Max Reward Rate</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
@@ -66,17 +68,18 @@
           </div>
 
           <div class="sb-packetWrapper">
-            <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">PRICING #3</h1>
+            <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.2rem; padding: 0 10px;">ULTIMATE</h1>
 
             <h2 class="text-uppercase spotbie-text-gradient">
-              $99.99/monthly
+              $399.99/monthly
             </h2>
 
             <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
             <div class="text-uppercase text-center">
-              <h3 class="sb-text-light-green-gradient">$99.99 USD</h3>
-              <span class="spotbie-text-gradient">Once every month.</span>
+              <h3 class="sb-text-light-green-gradient">4,750 Loyalty Points</h3>
+              <p class="spotbie-text-gradient">750 Bonus Loyalty Points</p>
+              <p class="spotbie-text-gradient">+0.02% Max Reward Rate</p>
             </div>
 
             <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="goHome()">
