--- a/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
+++ b/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
@@ -30,22 +30,18 @@
                     #newBalanceLoyaltyPoints>+{{ newUserLoyaltyPoints | number:'1.1-2':'en-US' }}</span>
         </p>
 
-        <div style="cursor: pointer; display: inline-block;"
-            *ngIf="userType !== eAllowedAccountTypes.Personal"
-            (click)="resetMyBalance()">
-            <span class='spotbie-text-gradient'>RESET BALANCE</span><i class='fa fa-refresh'></i>
-        </div>
-
-        <div class='sb-text-light-green-gradient mt-2 mb-4'
+<!--        <div class='sb-text-light-green-gradient mt-2 mb-4'
                 *ngIf="userType !== eAllowedAccountTypes.Personal">
                 {{ loyaltyPointBalanceBusiness.reset_balance | number:'1.0':'en-US' }}
-        </div>
+        </div>-->
 
+<!--
       <div style="cursor: pointer; display: inline-block;"
            *ngIf="userType !== eAllowedAccountTypes.Personal"
            (click)="manageLoyaltyTiers()">
         <span class='spotbie-text-gradient'>MANAGE TIERS</span> <i class='fa fa-coins'></i>
       </div>
+-->
 
       <div class='spotbie-text-gradient text-uppercase cursor-pointer' (click)="closeThis()" *ngIf="fullScreenWindow">
           CLOSE
@@ -53,6 +49,7 @@
     </div>
 </div>
 
+<!--
 <div class="spotbie-overlay-window pt-5 d-flex align-items-center justify-content-center" *ngIf="openTiers">
   <div style="overflow-y: scroll; min-width: 100%;">
     <div #businessLoyaltyTierInfo class="spotbie-loyaltyPointsInfo spotbie-text-gradient text-center text-uppercase">
@@ -187,6 +184,7 @@
     </div>
   </div>
 </div>
+-->
 
 <div class="spotbie-overlay-window pt-5 d-flex align-items-center justify-content-center" *ngIf="businessLoyaltyPointsOpen">
     <div style="overflow-y: scroll; min-width: 100%;">
@@ -195,21 +193,11 @@
         </div>
 
         <form [formGroup]="businessLoyaltyPointsForm" *ngIf="businessLoyaltyPointsFormUp">
-            <div *ngIf="businessLoyaltyPointsSubmitted && f.businessCoinPercentage.errors else percentage_normal"
-                    class="spotbie-input-info spotbie-text-gradient spotbie-error mt-4 mb-2">
-                <div *ngIf="f.businessCoinPercentage.errors.required">
-                    ENTER REWARD RATE %
-                </div>
-            </div>
-
-            <ng-template #percentage_normal>
-                <label class="spotbie-input-info spotbie-text-gradient mb-2">
-                    REWARD RATE %
-                </label>
-            </ng-template>
+            <label class="spotbie-input-info spotbie-text-gradient mb-2">
+                REWARD RATE %
+            </label>
 
             <input class="sb-input"
-                    (keyup)="calculateDollarValue()"
                     [dropSpecialCharacters]="false"
                     formControlName="businessCoinPercentage"
                     type="text"
@@ -217,33 +205,25 @@
                     separatorLimit="1000"
                     suffix="%"
                     maxlength="6"
+                    readonly
                     mask="percent" />
 
-            <div *ngIf="businessLoyaltyPointsSubmitted && f.businessLoyaltyPoints.errors else loyalty_points_normal"
-                    class="spotbie-input-info spotbie-text-gradient spotbie-error mt-4 mb-2">
-                <div *ngIf="f.businessLoyaltyPoints.errors.required">
-                    Loyalty Points per Month
-                </div>
-            </div>
-
-            <ng-template #loyalty_points_normal>
-                <label class="spotbie-input-info spotbie-text-gradient mt-4 mb-2">
-                    Loyalty Points per Month
-                </label>
-            </ng-template>
+            <label class="spotbie-input-info spotbie-text-gradient mt-4 mb-2">
+                Loyalty Points per Month
+            </label>
 
             <input class="sb-input"
-                    (keyup)="calculateDollarValue()"
                     formControlName="businessLoyaltyPoints"
                     type="text"
                     placeholder="0"
                     maxlength="7"
+                    readonly
                     thousandSeparator=","
                     mask="separator.0" />
         </form>
 
         <p class="text-uppercase mt-4" style="font-size: .8rem !important;" *ngIf="monthlyDollarValueCalculated">
-            <span class='spotbie-text-gradient'>monthly dollar value </span>
+            <span class='spotbie-text-gradient'>dollar value </span>
             <span class='sb-text-light-green-gradient'>${{ userPointToDollarRatio | number:'1.1-2':'en-US' }}</span>
         </p>
 
@@ -253,25 +233,21 @@
 
         <div class='sb-helpBlock mt-4' *ngIf="helpEnabled" style="text-align: center;">
             <p class='spotbie-text-gradient mb-3'>
-                Input the dollar value of each of your loyalty points.
+                SpotBie calculates the value of your LP points based on the competition around your store.
             </p>
 
             <p class='spotbie-text-gradient mb-3'>
-                Input the amount of loyalty points you want to give away each month.
+                When your customers <b>scan your QR code</b>, they will get an amount of loyalty points proportional to their bill.
             </p>
 
             <p class='spotbie-text-gradient mb-3'>
-                When your customers <b>scan your QR code</b>, they will get an amount of loyalty points directly proportional to their bill.
-            </p>
-
-            <p class='spotbie-text-gradient mb-3'>
-                Let's say your customer spent <b>$200</b> on their bill. If your <b>loyalty points are worth 2.5% of a dollar</b>, then your customer will gain
+                Let's say your customer spent <b>$200</b> on their bill. If your <b>loyalty points are worth 2.5% of a dollar</b>, then the customer will gain
                 <br/><b>a $5.00 Reward in Loyalty Points</b>!
             </p>
-        </div>
 
-        <div class='spotbie-button text-uppercase mt-3' (click)="submitBusinessLoyaltyPoints()">
-            SAVE
+            <p class='spotbie-text-gradient mb-3'>
+                At the end of each month, SpotBie will reimburse you for rewards claimed at your business and unused Loyalty Points.
+            </p>
         </div>
 
         <div class='spotbie-text-gradient text-center text-uppercase mt-4'
