--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -273,56 +273,6 @@
     <div class='sb-vertical-align-wrapper' *ngIf="loadAccountTypes">
         <div class="spotbie-select-menu" style="display: table-cell; vertical-align: middle;">
             <div>
-                <div *ngIf="!userIsSubscribed &&
-                            !userIsTrial &&
-                            chosenAccountType != 4 &&
-                            user.trial_ends_at !== null
-                            else normalSubscriptionTemplate">
-                    <div class="pb-4">
-                        <i class="fa fa-exclamation-triangle"></i>
-                    </div>
-
-                    <h5 class="spotbie-text-gradient">
-                        YOUR MEMBERSHIP IS EXPIRED
-                    </h5>
-
-                    <div *ngIf="!userIsSubscribed && chosenAccountType != 4 && user.trial_ends_at !== null">
-                      <h6 class="mt-4 text-white sb-text-light-green-gradient">PICK YOUR PLAN</h6>
-
-                      <div class="mt-4 spotbie-price-box" style="font-size: .8rem;">
-                        <div class="p2 text-start text-white" (click)="activateFullMembership(1)">
-                          <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$69.99/monthly</span>
-                          <ul>
-                            <li>Charged $840 every 12 months</li>
-                          </ul>
-                          <button class="spotbie-button">BUY</button>
-                        </div>
-                        <div class="p2 text-start text-white" (click)="activateFullMembership(2)">
-                          <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$79.99/monthly</span>
-                          <ul>
-                            <li>Charged $480 every 6 months</li>
-                          </ul>
-                          <button class="spotbie-button">BUY</button>
-                        </div>
-                        <div class="p2 text-start text-white" (click)="activateFullMembership(3)">
-                          <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$99.99/monthly</span>
-                          <ul>
-                            <li>Charged $99 every month</li>
-                          </ul>
-                          <button class="spotbie-button">BUY</button>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-
-                <ng-template #normalSubscriptionTemplate>
-                    <h5 *ngIf="!userIsSubscribed &&
-                                chosenAccountType != 4 &&
-                                user.trial_ends_at === null"
-                        class="sb-text-light-green-gradient">
-                        1. START YOUR 2 MONTH TRIAL
-                    </h5>
-
                     <div class="spotbie-input-info spotbie-text-gradient text-center mt-4 mb-4">
                         Choose an account type.
                     </div>
@@ -338,76 +288,107 @@
                         "Events" account type is coming soon.
                     </div>
 
-                    <div class="mt-4" style="font-size: .8rem;" *ngIf="userIsTrial && !userIsSubscribed">
-                        <span class='sb-text-light-green-gradient'>TRIAL IS ACTIVE</span>
-
-                        <div class='spotbie-text-gradient text-uppercase mt-2 mb-4' style="font-size: .8rem;">
-                            EXPIRES ON {{ user.trial_ends_at | date:'mediumDate' }}
-                        </div>
-                    </div>
-
-                    <div class="mt-4 mb-4" style="font-size: .8rem;" *ngIf="userIsSubscribed">
-                        <span class='sb-text-light-green-gradient'>MEMBERSHIP IS ACTIVE</span>
+<!--                    &lt;!&ndash; User's membership is active &ndash;&gt;
+                    <div class="mt-4 mb-4" style="font-size: .8rem;" *ngIf="userIsSubscribed else membershipExpired">
+                        <span class='sb-text-light-green-gradient' *ngIf="!user.ends_at">MEMBERSHIP IS ACTIVE</span>
 
                         <div class="mt-4 mb-4 spotbie-price-box" style="font-size: .8rem;">
-                          <div class="p2 text-start text-white" *ngIf="userSubscriptionPlan === 'spotbie.business_subscription_price_1'">
-                            <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$69.99/monthly</span>
-                            <ul>
-                              <li>Charged $840 every 12 months</li>
-                            </ul>
-                          </div>
-                          <div class="p2 text-start text-white" *ngIf="userSubscriptionPlan === 'spotbie.business_subscription_price_2'">
-                            <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$79.99/monthly</span>
-                            <ul>
-                              <li>Charged $480 every 6 months</li>
-                            </ul>
-                          </div>
-                          <div class="p2 text-start text-white" *ngIf="userSubscriptionPlan === 'spotbie.business_subscription_price'">
-                            <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$99.99/monthly</span>
-                            <ul>
-                              <li>Charged $99 every month</li>
-                            </ul>
-                          </div>
+                            <div class="p2 text-start text-white" *ngIf="userSubscriptionPlan === 'spotbie.business_subscription_price1'">
+                                <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$199.99/monthly</span>
+                                <ul>
+                                    <li>2,000 LOYALTY POINTS</li>
+                                    <li>No Bonus Loyalty Points</li>
+                                    <li>Default Max Reward Rate</li>
+                                </ul>
+                            </div>
+
+                            <div class="p2 text-start text-white" *ngIf="userSubscriptionPlan === 'spotbie.business_subscription_price_1_2'">
+                                <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$299.99/monthly</span>
+                                <ul>
+                                    <li>3,500 LOYALTY POINTS</li>
+                                    <li>500 Bonus Loyalty Points</li>
+                                    <li>+0.01% Max Reward Rate</li>
+                                </ul>
+                            </div>
+
+                            <div class="p2 text-start text-white" *ngIf="userSubscriptionPlan === 'spotbie.business_subscription_price_2_2'">
+                                <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$399.99/monthly</span>
+                                <ul>
+                                    <li>4,750 LOYALTY POINTS</li>
+                                    <li>750 Bonus Loyalty Points</li>
+                                    <li>+0.02% Max Reward Rate</li>
+                                </ul>
+                            </div>
+
+                            <div class="p2 text-start text-white" *ngIf="userSubscriptionPlan === 'spotbie.business_subscription_price'">
+                                <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$99.99/monthly</span>
+                                <ul>
+                                    <li>LEGACY MEMBERSHIP (10,000 points)</li>
+                                </ul>
+                            </div>
                         </div>
 
-                        <div class='spotbie-text-gradient text-uppercase mt-2 mb-4' style="font-size: .8rem;">
-                            NEXT PAYMENT {{ user.trial_ends_at | date:'mediumDate' }}
+                        <div class='spotbie-text-gradient text-uppercase mt-2 mb-4' *ngIf="!user.ends_at" style="font-size: .8rem;">
+                            NEXT PAYMENT {{ user.next_payment | date:'mediumDate' }}
                         </div>
 
-                        <span class='sb-text-red-gradient text-uppercase cursor-pointer' (click)="cancelMembership()">
-                            CANCEL MEMBERSHIP
+                        <span class='sb-text-light-green-gradient' *ngIf="user.ends_at">YOU CANCELLED YOUR MEMBERSHIP</span>
+                        <br/>
+                        <span class='sb-text-light-green-gradient' *ngIf="user.ends_at">
+                            Last Day {{ user.ends_at | date }}
                         </span>
 
+                        <span class='sb-text-red-gradient text-uppercase cursor-pointer' *ngIf="!user.ends_at" (click)="cancelMembership()">
+                            CANCEL MEMBERSHIP
+                        </span>
                     </div>
 
-                    <div *ngIf="!userIsSubscribed && chosenAccountType != 4 && user.trial_ends_at !== null">
-                      <h6 class="mt-4 text-white sb-text-light-green-gradient">PICK YOUR PLAN</h6>
+                    &lt;!&ndash; Membership is Expired Case &ndash;&gt;
+                    <ng-template #membershipExpired>
+                        <div *ngIf="!userIsSubscribed && chosenAccountType != 4 && user.business">
+                            <div class="pb-4">
+                                <i class="fa fa-exclamation-triangle"></i>
+                            </div>
 
-                      <div class="mt-4 spotbie-price-box" style="font-size: .8rem;">
-                        <div class="p2 text-start text-white" (click)="activateFullMembership(1)">
-                          <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$69.99/monthly</span>
-                          <ul>
-                            <li>Charged $840 every 12 months</li>
-                          </ul>
-                          <button class="spotbie-button">BUY</button>
+                            <h5 class="spotbie-text-gradient">
+                                YOUR MEMBERSHIP IS EXPIRED
+                            </h5>
+
+                            <h6 class="mt-4 text-white sb-text-light-green-gradient">PICK YOUR PLAN</h6>
+
+                            <div class="mt-4 spotbie-price-box" style="font-size: .8rem;">
+                                <div class="p2 text-start text-white" (click)="activateFullMembership(1)">
+                                    <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$199.99/monthly</span>
+                                    <ul>
+                                        <li>2,000 LOYALTY POINTS</li>
+                                        <li>No Bonus Loyalty Points</li>
+                                        <li>Default Max Reward Rate</li>
+                                    </ul>
+                                    <button class="spotbie-button">BUY</button>
+                                </div>
+
+                                <div class="p2 text-start text-white" (click)="activateFullMembership(2)">
+                                    <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$299.99/monthly</span>
+                                    <ul>
+                                        <li>3,500 LOYALTY POINTS</li>
+                                        <li>500 Bonus Loyalty Points</li>
+                                        <li>+0.01% Max Reward Rate</li>
+                                    </ul>
+                                    <button class="spotbie-button">BUY</button>
+                                </div>
+
+                                <div class="p2 text-start text-white" (click)="activateFullMembership(3)">
+                                    <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$399.99/monthly</span>
+                                    <ul>
+                                        <li>4,750 LOYALTY POINTS</li>
+                                        <li>750 Bonus Loyalty Points</li>
+                                        <li>+0.02% Max Reward Rate</li>
+                                    </ul>
+                                    <button class="spotbie-button">BUY</button>
+                                </div>
+                            </div>
                         </div>
-                        <div class="p2 text-start text-white" (click)="activateFullMembership(2)">
-                          <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$79.99/monthly</span>
-                          <ul>
-                            <li>Charged $480 every 6 months</li>
-                          </ul>
-                          <button class="spotbie-button">BUY</button>
-                        </div>
-                        <div class="p2 text-start text-white" (click)="activateFullMembership(3)">
-                          <span style="font-size: 1.2rem;" class="sb-text-light-green-gradient">$99.99/monthly</span>
-                          <ul>
-                            <li>Charged $99 every month</li>
-                          </ul>
-                          <button class="spotbie-button">BUY</button>
-                        </div>
-                      </div>
-                    </div>
-                </ng-template>
+                    </ng-template>-->
             </div>
         </div>
     </div>
@@ -442,19 +423,6 @@
             </div>
         </div>
     </form>
-</div>
-
-<div class='spotbie-overlay-window d-flex flex-column
-            align-content-center justify-content-center align-items-center' *ngIf="accountDeactivation && isSocialAccount">
-    <h5 class="spotbie-text-gradient">DEACTIVATE ACCOUNT</h5>
-
-    <div class="spotbie-button spotbie-button-mini text-uppercase" (click)="deactivateAccount()">
-        Deactivate
-    </div>
-
-    <div class="spotbie-text-gradient text-center text-uppercase mt-4" (click)="cancelDeactivateAccount()">
-        CANCEL
-    </div>
 </div>
 
 <div class='spotbie-overlay-window' *ngIf="placeSettingsFormUp">
@@ -734,8 +702,8 @@
                 <tr>
                     <td>
                         <div class='spotbie-text-gradient sb-helpDemoText text-center text-uppercase mt-4'>
-                            Don't have one? Book
-                            <span class='sb-text-light-green-gradient cursor-pointer' (click)="calendly()">free demo with SpotBie here.</span>
+                            Don't have one?<br/>
+                            <span class='sb-text-light-green-gradient cursor-pointer' (click)="calendly()">Book a free demo with today.</span>
                         </div>
                     </td>
                 </tr>
